[package]
name = "bhdump"
version = "0.0.1"
edition = "2024"
description = "Export browser history in JSON, CSV, and other formats"
license = "MIT"
repository = "https://github.com/sagikazarmark/bhdump"
homepage = "https://github.com/sagikazarmark/bhdump"
keywords = ["browser", "history", "export", "cli", "sqlite"]
categories = ["command-line-utilities", "database"]

[lib]
name = "bhdump"
path = "src/lib.rs"

[[bin]]
name = "bhdump"
path = "src/main.rs"

[dependencies]
cel-interpreter = { version = "0.10", features = ["chrono", "regex"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
csv = "1.4"
dirs = "6.0"
interim = { version = "0.2", features = ["chrono_0_4"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.26"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
csv = "1.4"
rusqlite = { version = "0.39", features = ["bundled"] }
serde_json = "1.0"
tracing-subscriber = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{version}}"
tag-prefix = ""
